<resources>
    //page one
    <string name="app_name">Assigment 3</string>
    <string name="texthint1">Enter Name</string>
    <string name="texthint2">Enter Email</string>
    <string name="radButton1">Student</string>
    <string name="radButton2">Employee</string>
    <string name="radButton3">Other</string>
    <string name="nextButton1">Next</string>
    //page 2


    //page 3
    <string name="educationText">N/A</string>
    <string name="maritalText">N/A</string>
    <string name="livingText">N/A</string>
    <string name="incomeText">N/A</string>
    //page 4
    <string name="cancelButton">Cancel</string>
    <string name="submitButton">Submit</string>
    <string name="textEducation">What is the highest degree or level of education you have completed?</string>
    <string name="radButton4">Below High School</string>
    <string name="radButton5">High School</string>
    <string name="radButton6">Bachelors Degree</string>
    <string name="radButton7">Masters Degree</string>
    <string name="radButton8">Ph.D or higher</string>
    <string name="radButton9">Trade School</string>
    <string name="radButton10">Prefer not to say</string>
    //page 5
    <string name="textMarital">What is your marital status?</string>
    <string name="radButton11">Not Married</string>
    <string name="radButton12">Married</string>
    <string name="radButton13">Prefer not to say</string>
    //page 6
    <string name="textLiving">Which of the following describes your living status?</string>
    <string name="radButton14">Homeowner</string>
    <string name="radButton15">Renter</string>
    <string name="radButton16">Lessee</string>
    <string name="radButton17">Other</string>
    <string name="radButton18">Prefer Not to say</string>
    //page 7
    <string name="textIncome">$50K to &lt;$100K</string>
    //Final Page
    <string name="nameFinal">N/A</string>
    <string name="emailFinal">N/A</string>
    <string name="roleFinal">N/A</string>
    <string name="incomeFinal">N/A</string>
    <string name="educationFinal">N/A</string>
    <string name="maritalFinal">N/A</string>
    <string name="livingFinal">N/A</string>

</resources>