<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EducationLevel">

    <Button
        android:id="@+id/cancelButton1"
        android:layout_width="155dp"
        android:layout_height="47dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/cancelButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/submitButton1"
        android:layout_width="155dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/submitButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Select Education Level"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="322dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:text="@string/textEducation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview1" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="252dp"
        android:layout_height="352dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <RadioButton
            android:id="@+id/radButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radButton4" />

        <RadioButton
            android:id="@+id/radButton5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radButton5" />

        <RadioButton
            android:id="@+id/radButton6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radButton6" />

        <RadioButton
            android:id="@+id/radButton7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radButton7" />

        <RadioButton
            android:id="@+id/radButton8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radButton8" />

        <RadioButton
            android:id="@+id/radButton9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radButton9" />

        <RadioButton
            android:id="@+id/radButton10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radButton10" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>