<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MaritalStatus">

    <Button
        android:id="@+id/submitButton3"
        android:layout_width="155dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/submitButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancelButton2"
        android:layout_width="155dp"
        android:layout_height="47dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/cancelButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Select Marital Status"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="322dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:text="@string/textMarital"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview1" />

    <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="252dp"
        android:layout_height="352dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <RadioButton
            android:id="@+id/radButton11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radButton11" />

        <RadioButton
            android:id="@+id/radButton12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radButton12" />

        <RadioButton
            android:id="@+id/radButton13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radButton13" />


    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>